fixed quote spacing

--- a/src/app/Components/z1-about/z1-about.component.css
+++ b/src/app/Components/z1-about/z1-about.component.css
@@ -3,7 +3,7 @@ body{
 }
 
 #big_img{
-    height: 300px;
+    height: 400px;
     max-width:100%;
 }
 
@@ -22,6 +22,13 @@ h1{
 h2{
     color: #D62383;
     font-size: 200%;
+    text-align: center;
+    font-weight: bold;
+    font-style: italic;
+}
+h3{
+    color: #a00d5c;
+    font-size: 150%;
     text-align: center;
     font-weight: bold;
     font-style: italic;
